removes float from ads to prevent buggy text wrapping in firefox

--- a/ui/css/article.css
+++ b/ui/css/article.css
@@ -1780,12 +1780,13 @@ aside { }
 
     /* BREAKPOINT */
     @media screen and (min-width: 976px) {
-    /* Turns out we still need the ad-box to float in order to prevent collisions with xl and xxl figures (which must be floated left to prevent huge gaps in the text column). */
 
       .ad-box--bigbox {
-          /* float: none; */
+          float: none; /* Float can be removed if overflow is set to auto. Prevents buggy wrapping of body text in 
+          Firefox and also allows for more accurate ad positioning by editors. */
           clear: none;
           margin-top: 1.5em;
+          overflow: auto; /* Prevents collision with xl and xxl figures (which must be floated left to prevent huge gaps in the text column). */
       }
       
     }
